--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <version>2.2.12</version>
         </dependency>
         
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.5</version>
+        </dependency>
+        
         <dependency>  
             <groupId>org.primefaces.themes</groupId>  
             <artifactId>ui-lightness</artifactId>  
